# Progetto_PDS

./: Progetto PDS ITA.txt  README.md  progettoPDS.docx
CryptoFunctions/: CMakeLists.txt  CryptoExecutor.cpp  CryptoExecutor.h  main.cpp
HashExecutor/: CMakeLists.txt  HashExecutor.cpp  HashExecutor.h  istruzioni.md  main.cpp
source/: linuxInstaller.sh
source/API_client/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  SocketProvaClient.cpp  api_client.md  main.cpp
source/API_server/: CMakeLists.txt  ServerSocket.cpp  ServerSocket.h  SocketProvaServer.h  api_server.md  main.cpp
source/CryptoFunctions/: CryptoExecutor.cpp  CryptoExecutor.h  main.cpp
source/Scripts_(linux_only)/: BoostInstaller.sh  OpenSSLInstaller.sh
source/client/: CMakeLists.txt  ClientProva.cpp  ClientProva.h  FileSystemWatcher.cpp  FileSystemWatcher.h  FileWatcher.h  PathStatusMap.h  client.md  main.cpp
source/client/API/: SocketProva.cpp  SocketProva.h  SocketProvaClient.cpp  SocketProvaClient.h
source/client/API_client/: ClientSocket.cpp  ClientSocket.h
source/server/: CMakeLists.txt  Cookie.cpp  Cookie.h  CookieMap.h  README.md  Server.cpp  Server.h  ServerProva.cpp  ServerProva.h  credenziali.txt  main.cpp  server.md
source/server/API/: SocketProvaServer.cpp  SocketProvaServer.h
source/server/API_server/: ServerSocket.cpp  ServerSocket.h
